selection feature sip

--- a/misc/demo/grid-directive.html
+++ b/misc/demo/grid-directive.html
@@ -43,20 +43,11 @@
       app.controller('Main', function($scope, $http) {
           // $scope.gridOptions = { data: 'data' };
           $scope.gridOptions = {};
-          // $scope.gridOptions.columnDefs = [ {name:"First Name", field:"firstName"} ];
+          $scope.gridOptions.columnDefs = [ {name:"First Name", field:"firstName"} ];
 
-          $http.get('/misc/site/data/100_columns.json')
-            .success(function(data) {
-              $scope.gridOptions.columnDefs = [];
 
-              angular.forEach(data[0], function(v, k) {
-                $scope.gridOptions.columnDefs.push({ field: k, width: 57 });
-              });
 
-              $scope.gridOptions.data = data;
-            });
-
-          $scope.data = [
+          $scope.gridOptions.data = [
           {
               "id": 0,
               "age": 31,
@@ -71,534 +62,6 @@
               "firstName": "Sadie",
               "lastName": "Lowery",
               "company": "Quinex",
-              "employed": true
-          },
-          {
-              "id": 2,
-              "age": 27,
-              "firstName": "Cathleen",
-              "lastName": "Baldwin",
-              "company": "Signidyne",
-              "employed": false
-          },
-          {
-              "id": 3,
-              "age": 27,
-              "firstName": "Deborah",
-              "lastName": "Savage",
-              "company": "Pyramia",
-              "employed": true
-          },
-          {
-              "id": 4,
-              "age": 33,
-              "firstName": "Kirsten",
-              "lastName": "Espinoza",
-              "company": "Buzzworks",
-              "employed": false
-          },
-          {
-              "id": 5,
-              "age": 26,
-              "firstName": "Ward",
-              "lastName": "Nichols",
-              "company": "Xleen",
-              "employed": false
-          },
-          {
-              "id": 6,
-              "age": 40,
-              "firstName": "Atkinson",
-              "lastName": "Thornton",
-              "company": "Neocent",
-              "employed": true
-          },
-          {
-              "id": 7,
-              "age": 34,
-              "firstName": "Strong",
-              "lastName": "Perkins",
-              "company": "Xumonk",
-              "employed": true
-          },
-          {
-              "id": 8,
-              "age": 28,
-              "firstName": "Magdalena",
-              "lastName": "Tucker",
-              "company": "Flumbo",
-              "employed": true
-          },
-          {
-              "id": 9,
-              "age": 23,
-              "firstName": "Ochoa",
-              "lastName": "Davenport",
-              "company": "Prismatic",
-              "employed": false
-          },
-          {
-              "id": 10,
-              "age": 36,
-              "firstName": "Lena",
-              "lastName": "Herman",
-              "company": "Spacewax",
-              "employed": false
-          },
-          {
-              "id": 11,
-              "age": 26,
-              "firstName": "Craft",
-              "lastName": "Jarvis",
-              "company": "Xymonk",
-              "employed": true
-          },
-          {
-              "id": 12,
-              "age": 26,
-              "firstName": "Gabrielle",
-              "lastName": "Rowland",
-              "company": "Paragonia",
-              "employed": true
-          },
-          {
-              "id": 13,
-              "age": 21,
-              "firstName": "Dillard",
-              "lastName": "Downs",
-              "company": "Xanide",
-              "employed": true
-          },
-          {
-              "id": 8,
-              "age": 28,
-              "firstName": "Magdalena",
-              "lastName": "Tucker",
-              "company": "Flumbo",
-              "employed": true
-          },
-          {
-              "id": 9,
-              "age": 23,
-              "firstName": "Ochoa",
-              "lastName": "Davenport",
-              "company": "Prismatic",
-              "employed": false
-          },
-          {
-              "id": 10,
-              "age": 36,
-              "firstName": "Lena",
-              "lastName": "Herman",
-              "company": "Spacewax",
-              "employed": false
-          },
-          {
-              "id": 11,
-              "age": 26,
-              "firstName": "Craft",
-              "lastName": "Jarvis",
-              "company": "Xymonk",
-              "employed": true
-          },
-          {
-              "id": 12,
-              "age": 26,
-              "firstName": "Gabrielle",
-              "lastName": "Rowland",
-              "company": "Paragonia",
-              "employed": true
-          },
-          {
-              "id": 13,
-              "age": 21,
-              "firstName": "Dillard",
-              "lastName": "Downs",
-              "company": "Xanide",
-              "employed": true
-          },
-          {
-              "id": 8,
-              "age": 28,
-              "firstName": "Magdalena",
-              "lastName": "Tucker",
-              "company": "Flumbo",
-              "employed": true
-          },
-          {
-              "id": 9,
-              "age": 23,
-              "firstName": "Ochoa",
-              "lastName": "Davenport",
-              "company": "Prismatic",
-              "employed": false
-          },
-          {
-              "id": 10,
-              "age": 36,
-              "firstName": "Lena",
-              "lastName": "Herman",
-              "company": "Spacewax",
-              "employed": false
-          },
-          {
-              "id": 11,
-              "age": 26,
-              "firstName": "Craft",
-              "lastName": "Jarvis",
-              "company": "Xymonk",
-              "employed": true
-          },
-          {
-              "id": 12,
-              "age": 26,
-              "firstName": "Gabrielle",
-              "lastName": "Rowland",
-              "company": "Paragonia",
-              "employed": true
-          },
-          {
-              "id": 13,
-              "age": 21,
-              "firstName": "Dillard",
-              "lastName": "Downs",
-              "company": "Xanide",
-              "employed": true
-          },
-          {
-              "id": 8,
-              "age": 28,
-              "firstName": "Magdalena",
-              "lastName": "Tucker",
-              "company": "Flumbo",
-              "employed": true
-          },
-          {
-              "id": 9,
-              "age": 23,
-              "firstName": "Ochoa",
-              "lastName": "Davenport",
-              "company": "Prismatic",
-              "employed": false
-          },
-          {
-              "id": 10,
-              "age": 36,
-              "firstName": "Lena",
-              "lastName": "Herman",
-              "company": "Spacewax",
-              "employed": false
-          },
-          {
-              "id": 11,
-              "age": 26,
-              "firstName": "Craft",
-              "lastName": "Jarvis",
-              "company": "Xymonk",
-              "employed": true
-          },
-          {
-              "id": 12,
-              "age": 26,
-              "firstName": "Gabrielle",
-              "lastName": "Rowland",
-              "company": "Paragonia",
-              "employed": true
-          },
-          {
-              "id": 13,
-              "age": 21,
-              "firstName": "Dillard",
-              "lastName": "Downs",
-              "company": "Xanide",
-              "employed": true
-          },
-          {
-              "id": 8,
-              "age": 28,
-              "firstName": "Magdalena",
-              "lastName": "Tucker",
-              "company": "Flumbo",
-              "employed": true
-          },
-          {
-              "id": 9,
-              "age": 23,
-              "firstName": "Ochoa",
-              "lastName": "Davenport",
-              "company": "Prismatic",
-              "employed": false
-          },
-          {
-              "id": 10,
-              "age": 36,
-              "firstName": "Lena",
-              "lastName": "Herman",
-              "company": "Spacewax",
-              "employed": false
-          },
-          {
-              "id": 11,
-              "age": 26,
-              "firstName": "Craft",
-              "lastName": "Jarvis",
-              "company": "Xymonk",
-              "employed": true
-          },
-          {
-              "id": 12,
-              "age": 26,
-              "firstName": "Gabrielle",
-              "lastName": "Rowland",
-              "company": "Paragonia",
-              "employed": true
-          },
-          {
-              "id": 13,
-              "age": 21,
-              "firstName": "Dillard",
-              "lastName": "Downs",
-              "company": "Xanide",
-              "employed": true
-          },
-          {
-              "id": 8,
-              "age": 28,
-              "firstName": "Magdalena",
-              "lastName": "Tucker",
-              "company": "Flumbo",
-              "employed": true
-          },
-          {
-              "id": 9,
-              "age": 23,
-              "firstName": "Ochoa",
-              "lastName": "Davenport",
-              "company": "Prismatic",
-              "employed": false
-          },
-          {
-              "id": 10,
-              "age": 36,
-              "firstName": "Lena",
-              "lastName": "Herman",
-              "company": "Spacewax",
-              "employed": false
-          },
-          {
-              "id": 11,
-              "age": 26,
-              "firstName": "Craft",
-              "lastName": "Jarvis",
-              "company": "Xymonk",
-              "employed": true
-          },
-          {
-              "id": 12,
-              "age": 26,
-              "firstName": "Gabrielle",
-              "lastName": "Rowland",
-              "company": "Paragonia",
-              "employed": true
-          },
-          {
-              "id": 13,
-              "age": 21,
-              "firstName": "Dillard",
-              "lastName": "Downs",
-              "company": "Xanide",
-              "employed": true
-          },
-          {
-              "id": 8,
-              "age": 28,
-              "firstName": "Magdalena",
-              "lastName": "Tucker",
-              "company": "Flumbo",
-              "employed": true
-          },
-          {
-              "id": 9,
-              "age": 23,
-              "firstName": "Ochoa",
-              "lastName": "Davenport",
-              "company": "Prismatic",
-              "employed": false
-          },
-          {
-              "id": 10,
-              "age": 36,
-              "firstName": "Lena",
-              "lastName": "Herman",
-              "company": "Spacewax",
-              "employed": false
-          },
-          {
-              "id": 11,
-              "age": 26,
-              "firstName": "Craft",
-              "lastName": "Jarvis",
-              "company": "Xymonk",
-              "employed": true
-          },
-          {
-              "id": 12,
-              "age": 26,
-              "firstName": "Gabrielle",
-              "lastName": "Rowland",
-              "company": "Paragonia",
-              "employed": true
-          },
-          {
-              "id": 13,
-              "age": 21,
-              "firstName": "Dillard",
-              "lastName": "Downs",
-              "company": "Xanide",
-              "employed": true
-          },
-          {
-              "id": 8,
-              "age": 28,
-              "firstName": "Magdalena",
-              "lastName": "Tucker",
-              "company": "Flumbo",
-              "employed": true
-          },
-          {
-              "id": 9,
-              "age": 23,
-              "firstName": "Ochoa",
-              "lastName": "Davenport",
-              "company": "Prismatic",
-              "employed": false
-          },
-          {
-              "id": 10,
-              "age": 36,
-              "firstName": "Lena",
-              "lastName": "Herman",
-              "company": "Spacewax",
-              "employed": false
-          },
-          {
-              "id": 11,
-              "age": 26,
-              "firstName": "Craft",
-              "lastName": "Jarvis",
-              "company": "Xymonk",
-              "employed": true
-          },
-          {
-              "id": 12,
-              "age": 26,
-              "firstName": "Gabrielle",
-              "lastName": "Rowland",
-              "company": "Paragonia",
-              "employed": true
-          },
-          {
-              "id": 13,
-              "age": 21,
-              "firstName": "Dillard",
-              "lastName": "Downs",
-              "company": "Xanide",
-              "employed": true
-          },
-          {
-              "id": 8,
-              "age": 28,
-              "firstName": "Magdalena",
-              "lastName": "Tucker",
-              "company": "Flumbo",
-              "employed": true
-          },
-          {
-              "id": 9,
-              "age": 23,
-              "firstName": "Ochoa",
-              "lastName": "Davenport",
-              "company": "Prismatic",
-              "employed": false
-          },
-          {
-              "id": 10,
-              "age": 36,
-              "firstName": "Lena",
-              "lastName": "Herman",
-              "company": "Spacewax",
-              "employed": false
-          },
-          {
-              "id": 11,
-              "age": 26,
-              "firstName": "Craft",
-              "lastName": "Jarvis",
-              "company": "Xymonk",
-              "employed": true
-          },
-          {
-              "id": 12,
-              "age": 26,
-              "firstName": "Gabrielle",
-              "lastName": "Rowland",
-              "company": "Paragonia",
-              "employed": true
-          },
-          {
-              "id": 13,
-              "age": 21,
-              "firstName": "Dillard",
-              "lastName": "Downs",
-              "company": "Xanide",
-              "employed": true
-          },
-          {
-              "id": 8,
-              "age": 28,
-              "firstName": "Magdalena",
-              "lastName": "Tucker",
-              "company": "Flumbo",
-              "employed": true
-          },
-          {
-              "id": 9,
-              "age": 23,
-              "firstName": "Ochoa",
-              "lastName": "Davenport",
-              "company": "Prismatic",
-              "employed": false
-          },
-          {
-              "id": 10,
-              "age": 36,
-              "firstName": "Lena",
-              "lastName": "Herman",
-              "company": "Spacewax",
-              "employed": false
-          },
-          {
-              "id": 11,
-              "age": 26,
-              "firstName": "Craft",
-              "lastName": "Jarvis",
-              "company": "Xymonk",
-              "employed": true
-          },
-          {
-              "id": 12,
-              "age": 26,
-              "firstName": "Gabrielle",
-              "lastName": "Rowland",
-              "company": "Paragonia",
-              "employed": true
-          },
-          {
-              "id": 13,
-              "age": 21,
-              "firstName": "Dillard",
-              "lastName": "Downs",
-              "company": "Xanide",
               "employed": true
           }
         ]
