Add link to ui-grid.info

--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@
 				</div>
 			</div>
 		</header>
+		<div class="container text-center">
+		    <div class="row">
+		        <div class="offset2 span8 alert alert-warning">
+		          <h3><strong>News!</strong> ng-grid is being rewritten as <a href="http://ui-grid.info"><strong>UI Grid</strong></a>, it's in beta! Check it out.</h3>
+		        </div>
+		    </div>
+		</div>
 		<div ng-include="'partials/gettingStartedPage.html'"></div>
 		<div ng-include="'partials/examplesPage.html'"></div>
 		<div ng-include="'partials/apiPage.html'" style="clear: both"></div>
