Only show unstable version on index page, as using v2 version numbers (ng-grid) is confusing

--- a/misc/site/index.html
+++ b/misc/site/index.html
@@ -79,7 +79,9 @@
       
               <a class="btn btn-danger btn-large" href="https://github.com/angular-ui/ui-grid.info/tree/gh-pages/release" title="Download <%= version %>">
                 <i class="fa fa-download fa-fw"></i>
-                Download <small>( <%= stable_version %> / <%= version %> )</small>
+                <!-- Download <small>( <%= stable_version %> / <%= version %> )</small> --> <!-- TODO(c0bra): note: not showing stable version till 3.0.0 is released -->
+
+                Download <small>( <%= version %> )</small>
               </a>
       
               <a class="btn btn-success btn-large" href="http://<%= site %>/docs/#/tutorial" title="Tutorial">
