--- a/misc/site/index.html
+++ b/misc/site/index.html
@@ -133,9 +133,10 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular-animate.js"></script>
   <script src="//ui-grid.info/release/ui-grid-unstable.min.js"></script>
   <script>
-    angular.module('demo', ['ui.grid', 'ui.grid.edit', 'ui.grid.resizeColumns'])
+    angular.module('demo', ['ngAnimate', 'ui.grid', 'ui.grid.edit', 'ui.grid.resizeColumns'])
     .run(function($rootScope, uiGridConstants) {
       $rootScope.gridOptionsSimple = {
         data: [
