Correct demo beacuse of exception

--- a/misc/demo/grid-directive.html
+++ b/misc/demo/grid-directive.html
@@ -43,7 +43,7 @@
 <br>
 
 <script>
-    var app = angular.module('test', ['ui.grid', 'ui.grid.selection', 'ui.grid.expandable']);
+    var app = angular.module('test', ['ui.grid', 'ui.grid.selection']);
     app.controller('Main', function($scope, $http) {
         // $scope.gridOptions = { data: 'data' };
         $scope.gridOptions = {
