Working expandable rows, started working on toggling only one expandable row at a time but holding off for now

--- a/workbench/expandableRow.html
+++ b/workbench/expandableRow.html
@@ -25,6 +25,7 @@
     <div>
         <h4>{{row.entity.firstName}} {{row.entity.lastName}}</h4>
         <span>State: {{row.entity.state}}</span>
+        <p>{{row.entity.firstName}} is a {{row.entity.age}} year old {{row.entity.sex}} who lives in {{row.entity.state}}</p>
     </div>
 </div>
 </body>
