Adding ability to style column data. Text alignment, font weight and font style.

--- a/workbench/expandableRow.html
+++ b/workbench/expandableRow.html
@@ -5,8 +5,6 @@
     <title>ng-grid workbench</title>
     <link rel="stylesheet" type="text/css" href="../lib/bootstrap/css/bootstrap.css"/>
     <link rel="stylesheet" type="text/css" href="../ng-grid.css"/>
-    <script type="text/javascript" src="largeLoad.js"></script>
-    <script type="text/javascript" src="largeTestData.js"></script>
     <script type="text/javascript" src="../lib/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="../lib/jquery-ui-1.9.1.custom.min.js"></script>
     <script type="text/javascript" src="../lib/angular.js"></script>
@@ -14,7 +12,13 @@
     <script type="text/javascript" src="../build/ng-grid.debug.js"></script>
     <script type="text/javascript" src="expandableRow.js"></script>
     <script>
-        angular.module('myApp', ['ngGrid']);
+        var app = angular.module('myApp', ['ngGrid']);
+
+        app.filter('percent', function(){
+            return function(input) {
+                return input + "%"
+            }
+        });
     </script>
 
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
@@ -23,9 +27,6 @@
 
 <div style="width: 800px; height: 400px; margin: 20px" ng-grid="gridOptions">
     <div>
-        <!--<h4>{{row.entity.firstName}} {{row.entity.lastName}}</h4>-->
-        <!--<span>State: {{row.entity.state}}</span>-->
-        <!--<p>{{row.entity.firstName}} is a {{row.entity.age}} year old {{row.entity.sex}} who lives in {{row.entity.state}}</p>-->
         <p>{{row.entity.details}}</p>
     </div>
 </div>
