feat[Core] commit for #2483.  Adds a showGridFooter option that will create a grid footer with the Total Items and Shown Items displayed.  Also shows Selected Items if using Selection feature.
 Breaking Changes in this commit:
 showFooter option renamed to showColumnFooter
 footerRowHeight option renamed to columnFooterHeight

--- a/misc/site/index.html
+++ b/misc/site/index.html
@@ -245,7 +245,8 @@
       
       $rootScope.gridOptionsComplex = {
         enableFiltering: true,
-        showFooter: true,
+        showGridFooter: true,
+        showColumnFooter: true,
         columnDefs: [
           { name: 'name', aggregationType: uiGridConstants.aggregationTypes.count, width: 150 },
           { name: 'gender', filter: { term: 'male' }, width: 150, enableCellEdit: false, 
