Fix(e2e): upgrade 101 and 102 tutorial syntax, fix return value of testObject

--- a/misc/site/index.html
+++ b/misc/site/index.html
@@ -102,6 +102,7 @@
             <li>Sorting</li>
             <li>Filtering</li>
             <li>User interaction</li>
+            <li>e2e testing integration</li>
           </ul>
           <h4 class="feature-heading">Advanced Features</h4>
           <ul>
