Add 3.0 release alert

--- a/misc/site/index.html
+++ b/misc/site/index.html
@@ -32,9 +32,17 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="/docs/#/api">API</a></li>
-          <li><a href="/docs/#/tutorial">Tutorial</a></li>
+          <li><a href="/docs/#/api"><i class="fa fa-book fa-fw"></i> API</a></li>
+          <li><a href="/docs/#/tutorial"><i class="fa fa-book fa-fw"></i> Tutorial</a></li>
         </ul>
+        <div class="navbar-header navbar-right">
+          <p class="navbar-text hidden-phone">
+            <iframe class="nav-ghbtn" src="http://ghbtns.com/github-btn.html?user=angular-ui&repo=ng-grid&type=watch&count=true"
+                  allowtransparency="true" frameborder="0" scrolling="0" width="120" height="20"></iframe>
+            <iframe class="nav-ghbtn" src="http://ghbtns.com/github-btn.html?user=angular-ui&repo=ng-grid&type=fork&count=true"
+                  allowtransparency="true" frameborder="0" scrolling="0" width="120" height="20"></iframe>
+          </p>
+        </div>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
@@ -67,6 +75,10 @@
             Tutorial
           </a>
         </p>
+
+        <div class="alert alert-info">
+          <h3>UI Grid <strong>v3.0.0</strong> has been released!  Check out the <a class="info-link" href="https://github.com/angular-ui/ng-grid">project on GitHub</a> for more information.</h3>
+        </div>
       </div>
     </div>
   </div>
