Fix ng-grid links on main page

--- a/misc/site/index.html
+++ b/misc/site/index.html
@@ -37,9 +37,9 @@
         </ul>
         <div class="navbar-header navbar-right">
           <p class="navbar-text hidden-phone">
-            <iframe class="nav-ghbtn" src="http://ghbtns.com/github-btn.html?user=angular-ui&repo=ng-grid&type=watch&count=true"
+            <iframe class="nav-ghbtn" src="http://ghbtns.com/github-btn.html?user=angular-ui&repo=ui-grid&type=watch&count=true"
                   allowtransparency="true" frameborder="0" scrolling="0" width="120" height="20"></iframe>
-            <iframe class="nav-ghbtn" src="http://ghbtns.com/github-btn.html?user=angular-ui&repo=ng-grid&type=fork&count=true"
+            <iframe class="nav-ghbtn" src="http://ghbtns.com/github-btn.html?user=angular-ui&repo=ui-grid&type=fork&count=true"
                   allowtransparency="true" frameborder="0" scrolling="0" width="120" height="20"></iframe>
           </p>
         </div>
@@ -58,7 +58,7 @@
           <li>Plugin architecture allows you to use only the features you need</li>
         </ul>
         <p class="btn-group2 text-center">
-          <a class="btn btn-success btn-large" href="https://github.com/angular-ui/ng-grid" title="Code on Github">
+          <a class="btn btn-success btn-large" href="https://github.com/angular-ui/ui-grid" title="Code on Github">
             <i class="fa fa-github fa-fw"></i>
               Code on Github
           </a>
@@ -77,7 +77,7 @@
         </p>
 
         <div class="alert alert-info">
-          <h3>UI Grid <strong>v3.0.0</strong> has been released!  Check out the <a class="info-link" href="https://github.com/angular-ui/ng-grid">project on GitHub</a> for more information.</h3>
+          <h3>UI Grid <strong>v3.0.0</strong> has been released!  Check out the <a class="info-link" href="https://github.com/angular-ui/ui-grid">project on GitHub</a> for more information.</h3>
         </div>
       </div>
     </div>
