Add ui-grid stability note

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		<div class="container text-center">
 		    <div class="row">
 		        <div class="offset2 span8 alert alert-warning">
-		          <h3><strong>News!</strong> ng-grid is being rewritten as <a href="http://ui-grid.info"><strong>UI Grid</strong></a>, it's in beta! Check it out.</h3>
+		          <h3><strong>News!</strong> ng-grid has being rewritten as <a href="http://ui-grid.info"><strong>UI Grid</strong></a>, it's now stable! Check it out.</h3>
 		        </div>
 		    </div>
 		</div>
