Add Q&A session link

--- a/misc/site/index.html
+++ b/misc/site/index.html
@@ -77,7 +77,12 @@
         </p>
 
         <div class="alert alert-info">
-          <h3>UI Grid <strong>v3.0.0</strong> has been released!  Check out the <a class="info-link" href="https://github.com/angular-ui/ui-grid">project on GitHub</a> for more information.</h3>
+          <h3 class="text-center">
+            UI Grid <strong>v3.0.0</strong> has been released!  Check out the <a class="info-link" href="https://github.com/angular-ui/ui-grid">project on GitHub</a> for more information.
+            <br>
+            <br>
+            Join the UI Grid team for a <a class="info-link" href="http://brianhann.com/ui-grid-qa/">Live Q&amp;A Session</a> Saturday, Aug. 8th @ 12:00PM CDT
+          </h3>
         </div>
       </div>
     </div>
