fix(customizer): Fixes less customizer in docs
The less customizer was broken when bootstrap was added for less mixins.
The less customizer now uses the newest version of less.js and compiles
all of the less files using imports instead of a concatinated file.
Feature less files are still not included in the customizer
unfortunately.

Closes #4079
Closes #3918
Related #4173

--- a/misc/site/index.html
+++ b/misc/site/index.html
@@ -34,6 +34,7 @@
         <ul class="nav navbar-nav">
           <li><a href="/docs/#/api"><i class="fa fa-book fa-fw"></i> API</a></li>
           <li><a href="/docs/#/tutorial"><i class="fa fa-book fa-fw"></i> Tutorial</a></li>
+          <li><a href="/customizer/"><i class="fa fa-wrench fa-fw"></i> Customizer</a></li>
         </ul>
         <div class="navbar-header navbar-right">
           <p class="navbar-text hidden-phone">
